--- a/UOSM-Lights.ioc
+++ b/UOSM-Lights.ioc
@@ -2,21 +2,17 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT
-FREERTOS.Tasks01=defaultTask,24,96,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
 Mcu.CPN=STM32F030F4P6
 Mcu.Family=STM32F0
-Mcu.IP0=FREERTOS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SPI1
+Mcu.IP3=SYS
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA0
@@ -24,8 +20,7 @@ Mcu.Pin1=PA1
 Mcu.Pin10=PA10
 Mcu.Pin11=PA13
 Mcu.Pin12=PA14
-Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
@@ -34,21 +29,18 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB1
 Mcu.Pin9=PA9
-Mcu.PinsNb=15
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.PendSV_IRQn=true\:3\:0\:false\:false\:false\:true\:false\:false\:false
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:true
-NVIC.SavedPendsvIrqHandlerGenerated=true
-NVIC.SavedSvcallIrqHandlerGenerated=true
-NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
 PA0.Locked=true
 PA0.Signal=GPIO_Output
 PA1.Locked=true
@@ -110,7 +102,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.FamilyName=M
 RCC.IPParameters=FamilyName,PLLCLKFreq_Value,TimSysFreq_Value
 RCC.PLLCLKFreq_Value=8000000
@@ -127,8 +119,6 @@ SPI1.VirtualType=VM_MASTER
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
-VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
