--- a/UOSM-Lights.ioc
+++ b/UOSM-Lights.ioc
@@ -3,7 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F030F4P6
 Mcu.Family=STM32F0
@@ -11,25 +11,22 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SPI1
 Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP4=TIM1
+Mcu.IP5=TIM14
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
-Mcu.Pin0=PA0
-Mcu.Pin1=PA1
-Mcu.Pin10=PA10
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
-Mcu.Pin5=PA5
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PB1
-Mcu.Pin9=PA9
-Mcu.PinsNb=14
+Mcu.Pin0=PA2
+Mcu.Pin1=PA3
+Mcu.Pin2=PA4
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PB1
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.Pin7=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin8=VP_TIM14_VS_ClockSourceINT
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -41,36 +38,20 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
-PA0.Locked=true
-PA0.Signal=GPIO_Output
-PA1.Locked=true
-PA1.Signal=GPIO_Output
-PA10.Locked=true
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
-PA13.Locked=true
-PA13.Signal=GPIO_Output
-PA14.Locked=true
-PA14.Signal=GPIO_Output
-PA2.Locked=true
-PA2.Signal=GPIO_Output
-PA3.Locked=true
-PA3.Signal=GPIO_Output
+PA2.Mode=Asynchronous
+PA2.Signal=USART1_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART1_RX
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=SPI_CAN_CS
 PA4.Locked=true
 PA4.Signal=GPIO_Output
-PA5.Mode=Full_Duplex_Master
+PA5.Mode=RX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
+PA6.Mode=RX_Only_Simplex_Unidirect_Master
 PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
-PA9.Locked=true
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
 PB1.Locked=true
-PB1.Signal=GPIO_Output
+PB1.Signal=S_TIM14_CH1
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -102,23 +83,28 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.FamilyName=M
 RCC.IPParameters=FamilyName,PLLCLKFreq_Value,TimSysFreq_Value
 RCC.PLLCLKFreq_Value=8000000
 RCC.TimSysFreq_Value=8000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI1.CLKPhase=SPI_PHASE_2EDGE
-SPI1.CLKPolarity=SPI_POLARITY_HIGH
-SPI1.CalculateBaudRate=1000.0 KBits/s
-SPI1.DataSize=SPI_DATASIZE_8BIT
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CLKPhase
+SH.S_TIM14_CH1.0=TIM14_CH1,PWM Generation1 CH1
+SH.S_TIM14_CH1.ConfNb=1
+SPI1.CalculateBaudRate=4.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES_RXONLY
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-USART1.BaudRate=9600
-USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
+TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM14.Channel=TIM_CHANNEL_1
+TIM14.IPParameters=Channel,Pulse,AutoReloadPreload
+TIM14.Pulse=0
+USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
