--- a/UOSM-Lights.ioc
+++ b/UOSM-Lights.ioc
@@ -17,16 +17,18 @@ Mcu.IP6=USART1
 Mcu.IPNb=7
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin2=PA4
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PB1
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin8=VP_TIM14_VS_ClockSourceINT
-Mcu.PinsNb=9
+Mcu.Pin0=PA0
+Mcu.Pin1=PA2
+Mcu.Pin10=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin2=PA3
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PB1
+Mcu.Pin7=PA14
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.Pin9=VP_TIM1_VS_ClockSourceINT
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -38,6 +40,10 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+PA0.Locked=true
+PA0.Signal=GPIO_Output
+PA14.Locked=true
+PA14.Signal=GPIO_Output
 PA2.Mode=Asynchronous
 PA2.Signal=USART1_TX
 PA3.Mode=Asynchronous
@@ -83,7 +89,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM14_Init-TIM14-false-HAL-true
 RCC.FamilyName=M
 RCC.IPParameters=FamilyName,PLLCLKFreq_Value,TimSysFreq_Value
 RCC.PLLCLKFreq_Value=8000000
