--- a/UOSM-Lights.ioc
+++ b/UOSM-Lights.ioc
@@ -18,17 +18,19 @@ Mcu.IPNb=7
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA0
-Mcu.Pin1=PA2
-Mcu.Pin10=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin2=PA3
-Mcu.Pin3=PA4
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PB1
-Mcu.Pin7=PA14
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_TIM1_VS_ClockSourceINT
-Mcu.PinsNb=11
+Mcu.Pin1=PA1
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin2=PA2
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB1
+Mcu.Pin9=PA14
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -38,10 +40,13 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
 PA0.Locked=true
 PA0.Signal=GPIO_Output
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA14.Locked=true
 PA14.Signal=GPIO_Output
 PA2.Mode=Asynchronous
@@ -52,10 +57,13 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=SPI_CAN_CS
 PA4.Locked=true
 PA4.Signal=GPIO_Output
-PA5.Mode=RX_Only_Simplex_Unidirect_Master
+PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
-PA6.Mode=RX_Only_Simplex_Unidirect_Master
+PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.Locked=true
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PB1.Locked=true
 PB1.Signal=S_TIM14_CH1
 PinOutPanel.RotationAngle=0
@@ -96,9 +104,13 @@ RCC.PLLCLKFreq_Value=8000000
 RCC.TimSysFreq_Value=8000000
 SH.S_TIM14_CH1.0=TIM14_CH1,PWM Generation1 CH1
 SH.S_TIM14_CH1.ConfNb=1
-SPI1.CalculateBaudRate=4.0 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES_RXONLY
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
+SPI1.CalculateBaudRate=1000.0 KBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
