--- a/UOSM-Lights.ioc
+++ b/UOSM-Lights.ioc
@@ -19,18 +19,17 @@ Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA0
 Mcu.Pin1=PA1
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin12=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
-Mcu.Pin5=PA5
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PB1
-Mcu.Pin9=PA14
-Mcu.PinsNb=13
+Mcu.Pin10=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin11=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin2=PA4
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=PA14
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -40,19 +39,17 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
 PA0.Locked=true
 PA0.Signal=GPIO_Output
 PA1.Locked=true
 PA1.Signal=GPIO_Output
+PA10.Locked=true
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA14.Locked=true
 PA14.Signal=GPIO_Output
-PA2.Mode=Asynchronous
-PA2.Signal=USART1_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART1_RX
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=SPI_CAN_CS
 PA4.Locked=true
@@ -64,8 +61,9 @@ PA6.Signal=SPI1_MISO
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PB1.Locked=true
-PB1.Signal=S_TIM14_CH1
+PA9.Locked=true
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -102,22 +100,19 @@ RCC.FamilyName=M
 RCC.IPParameters=FamilyName,PLLCLKFreq_Value,TimSysFreq_Value
 RCC.PLLCLKFreq_Value=8000000
 RCC.TimSysFreq_Value=8000000
-SH.S_TIM14_CH1.0=TIM14_CH1,PWM Generation1 CH1
-SH.S_TIM14_CH1.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_HIGH
-SPI1.CalculateBaudRate=1000.0 KBits/s
+SPI1.CalculateBaudRate=62.5 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM14.Channel=TIM_CHANNEL_1
-TIM14.IPParameters=Channel,Pulse,AutoReloadPreload
-TIM14.Pulse=0
-USART1.IPParameters=VirtualMode-Asynchronous
+TIM14.IPParameters=AutoReloadPreload
+USART1.BaudRate=38400
+USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
