--- a/UOSM-Lights.ioc
+++ b/UOSM-Lights.ioc
@@ -19,17 +19,19 @@ Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA0
 Mcu.Pin1=PA1
-Mcu.Pin10=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin11=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin2=PA4
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA14
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=12
+Mcu.Pin10=PA14
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin2=PA2
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -48,8 +50,12 @@ PA1.Signal=GPIO_Output
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA13.Locked=true
+PA13.Signal=GPIO_Output
 PA14.Locked=true
 PA14.Signal=GPIO_Output
+PA2.Locked=true
+PA2.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=SPI_CAN_CS
 PA4.Locked=true
@@ -101,8 +107,8 @@ RCC.IPParameters=FamilyName,PLLCLKFreq_Value,TimSysFreq_Value
 RCC.PLLCLKFreq_Value=8000000
 RCC.TimSysFreq_Value=8000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
-SPI1.CLKPhase=SPI_PHASE_1EDGE
-SPI1.CLKPolarity=SPI_POLARITY_LOW
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
 SPI1.CalculateBaudRate=62.5 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
