Packaged HAL functions and added all front lights functionality and blinking.

--- a/UOSM-Lights.ioc
+++ b/UOSM-Lights.ioc
@@ -106,10 +106,10 @@ RCC.FamilyName=M
 RCC.IPParameters=FamilyName,PLLCLKFreq_Value,TimSysFreq_Value
 RCC.PLLCLKFreq_Value=8000000
 RCC.TimSysFreq_Value=8000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_HIGH
-SPI1.CalculateBaudRate=62.5 KBits/s
+SPI1.CalculateBaudRate=4.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CLKPhase
