--- a/UOSM-Lights.ioc
+++ b/UOSM-Lights.ioc
@@ -12,26 +12,26 @@ Mcu.IP1=RCC
 Mcu.IP2=SPI1
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
-Mcu.IP5=TIM14
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP5=TIM3
+Mcu.IP6=TIM14
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
-Mcu.Pin0=PA0
-Mcu.Pin1=PA1
-Mcu.Pin10=PA14
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin13=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin2=PA2
-Mcu.Pin3=PA4
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
+Mcu.Pin0=PF0-OSC_IN
+Mcu.Pin1=PF1-OSC_OUT
+Mcu.Pin10=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin11=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin2=PA4
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PB1
 Mcu.Pin7=PA9
 Mcu.Pin8=PA10
-Mcu.Pin9=PA13
-Mcu.PinsNb=14
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -43,19 +43,9 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
-PA0.Locked=true
-PA0.Signal=GPIO_Output
-PA1.Locked=true
-PA1.Signal=GPIO_Output
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA13.Locked=true
-PA13.Signal=GPIO_Output
-PA14.Locked=true
-PA14.Signal=GPIO_Output
-PA2.Locked=true
-PA2.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=SPI_CAN_CS
 PA4.Locked=true
@@ -70,6 +60,11 @@ PA7.Signal=SPI1_MOSI
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB1.Signal=S_TIM14_CH1
+PF0-OSC_IN.Mode=HSE-External-Oscillator
+PF0-OSC_IN.Signal=RCC_OSC_IN
+PF1-OSC_OUT.Mode=HSE-External-Oscillator
+PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -101,24 +96,38 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM14_Init-TIM14-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM14_Init-TIM14-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true
+RCC.AHBFreq_Value=48000000
+RCC.APB1Freq_Value=48000000
+RCC.APB1TimFreq_Value=48000000
+RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
-RCC.IPParameters=FamilyName,PLLCLKFreq_Value,TimSysFreq_Value
-RCC.PLLCLKFreq_Value=8000000
-RCC.TimSysFreq_Value=8000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI1.CLKPhase=SPI_PHASE_2EDGE
-SPI1.CLKPolarity=SPI_POLARITY_HIGH
-SPI1.CalculateBaudRate=4.0 MBits/s
-SPI1.DataSize=SPI_DATASIZE_8BIT
+RCC.HCLKFreq_Value=48000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,PLLCLKFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.PLLCLKFreq_Value=48000000
+RCC.PLLMUL=RCC_PLL_MUL6
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.SYSCLKFreq_VALUE=48000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TimSysFreq_Value=48000000
+RCC.USART1Freq_Value=48000000
+RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM14_CH1.0=TIM14_CH1,PWM Generation1 CH1
+SH.S_TIM14_CH1.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI1.CalculateBaudRate=187.5 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CLKPhase
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM14.IPParameters=AutoReloadPreload
-USART1.BaudRate=38400
-USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
+TIM1.IPParameters=Prescaler,Period
+TIM1.Period=999
+TIM1.Prescaler=47
+TIM14.Channel=TIM_CHANNEL_1
+TIM14.IPParameters=Channel,Prescaler,Period
+TIM14.Period=999
+TIM14.Prescaler=47
+USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
@@ -126,4 +135,6 @@ VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
