--- a/UOSM-Lights.ioc
+++ b/UOSM-Lights.ioc
@@ -13,7 +13,7 @@ Mcu.IP2=SPI1
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
 Mcu.IP5=TIM3
-Mcu.IP6=TIM14
+Mcu.IP6=TIM16
 Mcu.IP7=USART1
 Mcu.IPNb=8
 Mcu.Name=STM32F030F4Px
@@ -21,17 +21,19 @@ Mcu.Package=TSSOP20
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
 Mcu.Pin10=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin11=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin12=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin2=PA4
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PB1
+Mcu.Pin11=VP_TIM1_VS_no_output4
+Mcu.Pin12=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM16_VS_no_output1
+Mcu.Pin2=PA2
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
 Mcu.Pin7=PA9
 Mcu.Pin8=PA10
 Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=13
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -43,9 +45,14 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM16_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_BRK_UP_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA2.Locked=true
+PA2.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=SPI_CAN_CS
 PA4.Locked=true
@@ -60,7 +67,6 @@ PA7.Signal=SPI1_MOSI
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB1.Signal=S_TIM14_CH1
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
 PF1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -96,7 +102,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM14_Init-TIM14-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -112,29 +118,33 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.S_TIM14_CH1.0=TIM14_CH1,PWM Generation1 CH1
-SH.S_TIM14_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 SPI1.CalculateBaudRate=187.5 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM1.IPParameters=Prescaler,Period
+TIM1.Channel-PWM\ Generation4\ No\ Output=TIM_CHANNEL_4
+TIM1.IPParameters=Channel-PWM Generation4 No Output,Prescaler,Period,TIM_MasterOutputTrigger
 TIM1.Period=999
 TIM1.Prescaler=47
-TIM14.Channel=TIM_CHANNEL_1
-TIM14.IPParameters=Channel,Prescaler,Period
-TIM14.Period=999
-TIM14.Prescaler=47
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_OC1
+TIM16.Channel=TIM_CHANNEL_1
+TIM16.IPParameters=Channel,Prescaler,Period
+TIM16.Period=9
+TIM16.Prescaler=47
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
+VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
+VP_TIM16_VS_no_output1.Mode=PWM Generation1 No Output
+VP_TIM16_VS_no_output1.Signal=TIM16_VS_no_output1
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_no_output4.Mode=PWM Generation4 No Output
+VP_TIM1_VS_no_output4.Signal=TIM1_VS_no_output4
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
