--- a/UOSM-Lights.ioc
+++ b/UOSM-Lights.ioc
@@ -19,19 +19,20 @@ Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA0
 Mcu.Pin1=PA1
-Mcu.Pin10=PA14
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin13=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin2=PA2
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
 Mcu.Pin6=PA7
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA13
-Mcu.PinsNb=14
+Mcu.Pin7=PB1
+Mcu.Pin8=PA9
+Mcu.Pin9=PA10
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -70,9 +71,11 @@ PA7.Signal=SPI1_MOSI
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
-ProjectManager.BackupPrevious=false
+ProjectManager.BackupPrevious=true
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
