--- a/UOSM-Lights.ioc
+++ b/UOSM-Lights.ioc
@@ -19,20 +19,21 @@ Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA0
 Mcu.Pin1=PA1
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=VP_SYS_VS_tim3
-Mcu.Pin13=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=VP_SYS_VS_tim3
+Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin2=PA2
-Mcu.Pin3=PA4
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB1
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=15
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB1
+Mcu.Pin9=PA9
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -60,6 +61,8 @@ PA14.Locked=true
 PA14.Signal=GPIO_Output
 PA2.Locked=true
 PA2.Signal=GPIO_Output
+PA3.Locked=true
+PA3.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=SPI_CAN_CS
 PA4.Locked=true
@@ -121,10 +124,10 @@ RCC.SYSCLKFreq_VALUE=32000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=32000000
 RCC.USART1Freq_Value=32000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_HIGH
-SPI1.CalculateBaudRate=16.0 MBits/s
+SPI1.CalculateBaudRate=500.0 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CLKPhase
@@ -142,3 +145,4 @@ VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
+isbadioc=false
