--- a/UOSM-Front-Lights.ioc
+++ b/UOSM-Front-Lights.ioc
@@ -47,9 +47,9 @@ PA0.Signal=GPIO_Output
 PA1.Locked=true
 PA1.Signal=SPI1_SCK
 PA10.Locked=true
-PA10.Signal=S_TIM1_CH3
+PA10.Signal=GPIO_Output
 PA11.Locked=true
-PA11.Signal=S_TIM1_CH4
+PA11.Signal=GPIO_Output
 PA4.Locked=true
 PA4.Signal=SPI1_NSS
 PA6.Locked=true
@@ -57,9 +57,9 @@ PA6.Signal=SPI1_MISO
 PA7.Locked=true
 PA7.Signal=SPI1_MOSI
 PA8.Locked=true
-PA8.Signal=S_TIM1_CH1
+PA8.Signal=GPIO_Output
 PA9.Locked=true
-PA9.Signal=S_TIM1_CH2
+PA9.Signal=GPIO_Output
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Signal=GPIO_Output
 PB4\ (NJTRST).Locked=true
@@ -86,8 +86,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=UOSM-Lights.ioc
-ProjectManager.ProjectName=UOSM-Lights
+ProjectManager.ProjectFileName=UOSM-Front-Lights.ioc
+ProjectManager.ProjectName=UOSM-Front-Lights
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -116,14 +116,6 @@ RCC.SAI1Freq_Value=4571428.571428572
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=32000000
 RCC.VCOSAI1OutputFreq_Value=32000000
-SH.S_TIM1_CH1.0=TIM1_CH1
-SH.S_TIM1_CH1.ConfNb=1
-SH.S_TIM1_CH2.0=TIM1_CH2
-SH.S_TIM1_CH2.ConfNb=1
-SH.S_TIM1_CH3.0=TIM1_CH3
-SH.S_TIM1_CH3.ConfNb=1
-SH.S_TIM1_CH4.0=TIM1_CH4
-SH.S_TIM1_CH4.ConfNb=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
